# claude-docs

./: .gitignore  README.md  pyproject.toml
.claude/commands/: pr.md
.github/workflows/: sync-docs.yml
docs/: get-started.md  intro.md  mcp.md  overview.md
docs/about-claude/: glossary.md  model-deprecations.md  pricing.md
docs/agent-sdk/: cost-tracking.md  custom-tools.md  hosting.md  mcp.md  modifying-system-prompts.md  overview.md  permissions.md  plugins.md  python.md  skills.md  slash-commands.md  streaming-vs-single-mode.md  structured-outputs.md  subagents.md  todo-tracking.md  typescript.md
docs/agents-and-tools/: claude-for-sheets.md  mcp-connector.md  remote-mcp-servers.md
docs/build-with-claude/: administration-api.md  batch-processing.md  citations.md  claude-code-analytics-api.md  claude-in-microsoft-foundry.md  claude-on-amazon-bedrock.md  claude-on-vertex-ai.md  context-editing.md  context-windows.md  embeddings.md  extended-thinking.md  files.md  multilingual-support.md  overview.md  pdf-support.md  prompt-caching.md  search-results.md  skills-guide.md  streaming.md  structured-outputs.md  token-counting.md  usage-cost-api.md  vision.md  working-with-messages.md
docs/claude-code/: amazon-bedrock.md  analytics.md  azure-ai-foundry.md  checkpointing.md  claude-code-on-the-web.md  claude_code_docs_map.md  cli-reference.md  common-workflows.md  costs.md  data-usage.md  desktop.md  devcontainer.md  github-actions.md  gitlab-ci-cd.md  google-vertex-ai.md  headless.md  hooks-guide.md  hooks.md  iam.md  interactive-mode.md  jetbrains.md  (+23 more)
src/: sync.py
(+45 files in other folders)
