[project]
name = "claude-docs"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "tomnagengast", email = "tnagengast@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
claude-docs = "sync:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sync"]

[tool.setuptools.package-dir]
"" = "src"
